# sip-indoor-station

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/sip_indoor_station/: __init__.py
src/sip_indoor_station/api/: state_api.py
src/sip_indoor_station/app/: config.py  http_server.py  main.py  state.py
src/sip_indoor_station/calls/: controller.py  history.py
src/sip_indoor_station/media/: gstreamer_webrtc_bridge.py
src/sip_indoor_station/sip/: digest.py  server.py
src/sip_indoor_station/web/static/: client.js  index.html
tests/: test_api.py  test_browser_client_source.py  test_digest.py  test_gstreamer_bridge_source.py  test_invite.py  test_register.py  test_state_api.py  test_webrtc_signaling.py
